WebCore:

2008-10-12  Brad Garcia  <bgarcia@google.com>

        Reviewed by Darin Adler.

        Interpret fractional percentage values for %MultiLength values.
        Fix for https://bugs.webkit.org/show_bug.cgi?id=3591
        Test: fast/frames/frame-length-fractional-percentage.html

        * platform/text/StringImpl.cpp:
        (WebCore::parseLength):

LayoutTests:

2008-10-12  Brad Garcia  <bgarcia@google.com>

        Reviewed by Darin Adler.

        Testcases for fractional frame lengths.
        https://bugs.webkit.org/show_bug.cgi?id=3591

        * fast/frames/frame-length-fractional.html: Added.
        * fast/frames/frame-length-fractional-expected.txt: Added.



Canonical link: https://commits.webkit.org/29768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37524 268f45cc-cd09-0410-ab3c-d52691b4dbfc